# porygon

./: .editorconfig  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  llms.txt  taplo.toml  treefmt.toml
.github/workflows/: ci.yml  publish.yml
crates/a2a-client/: Cargo.toml  README.md
crates/a2a-client/src/: lib.rs
crates/a2a-server/: Cargo.toml  LICENSE  README.md
crates/a2a-server/src/: handler.rs  lib.rs  router.rs
crates/a2a-server/tests/: integration.rs
crates/a2a-types/: Cargo.toml  README.md  build.rs
crates/a2a-types/proto/: a2a.proto
crates/a2a-types/src/: lib.rs
crates/ag-ui-motosan/: Cargo.toml  README.md
crates/ag-ui-motosan/src/: lib.rs
