[package]
name = "a2a-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A2A v1.0 client — reqwest-based HTTP client for A2A agents"

[dependencies]
a2a-types = { path = "../a2a-types" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
